# world-tree

./: .env  Cargo.toml  README.md
.github/workflows/: coverage.yml  general.yml
api/: .gitignore  package-lock.json  package.json
api/src/: index.ts  neo4j.ts  seeder.ts  server.ts  settings.ts  types.ts
api/src/gql/: index.ts
api/src/gql/knowledge/: index.ts
api/src/gql/user/: index.ts
api/src/utils/: comparePassword.ts  createJWT.ts  decodeJWT.ts  hashPassword.ts  index.ts
client/: .env.development  .eslintignore  .eslintrc.js  .gitignore  codegen.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.tsx  main.tsx
client/src/api/: apollo-helpers.codegen.ts  client.ts  index.ts  operations.codegen.ts  operations.graphql
client/src/components/: index.ts
client/src/components/AccountMenu/: index.tsx
client/src/components/GraphView/ListView/: ListView.test.tsx  index.tsx
client/src/components/GraphView/ListView/ListViewItem/: ListViewItem.test.tsx  index.tsx
client/src/components/LinkBehavior/: index.tsx
client/src/components/MainLayout/: MainLayout.test.tsx  index.tsx
client/src/components/PrivateRoute/: index.tsx
client/src/components/inputs/: utils.ts
client/src/components/inputs/TextField/: index.tsx
client/src/components/layouts/MainLayout/: MainLayout.test.tsx  index.tsx
client/src/components/layouts/PageLayout/: index.tsx
client/src/components/modal/: ConfirmationDialog.tsx  ModalProvider.tsx  constants.ts  index.tsx  types.ts  useModal.ts
client/src/contexts/: AuthContext.tsx
client/src/features/: index.ts
client/src/features/auth/SignInForm/: index.tsx
client/src/features/auth/SignInPage/: index.tsx
client/src/features/auth/components/: index.ts
client/src/features/auth/components/AuthPageLayout/: index.tsx
client/src/features/auth/components/SignInForm/: index.tsx
client/src/features/auth/components/SignUpForm/: index.tsx
client/src/features/auth/pages/SignInPage/: SignInPage.test.tsx  index.tsx
client/src/features/auth/pages/SignUpPage/: index.tsx
client/src/features/education/pages/EducationPage/: index.tsx
client/src/features/explore/pages/ExplorePage/: index.tsx
client/src/features/graph/: index.ts
client/src/features/graph/components/: index.ts
client/src/features/graph/components/Breadcrumbs/: index.tsx
client/src/features/graph/components/GraphView/ListView/: ListView.test.tsx  index.tsx
client/src/features/graph/components/GraphView/ListView/ListViewItem/: ListViewItem.test.tsx  index.tsx
client/src/features/graph/components/NodeForm/: index.tsx
client/src/features/graph/components/NodeMenu/: index.tsx
client/src/features/graph/pages/: index.ts
client/src/features/graph/pages/AddNodePage/: index.tsx
client/src/features/graph/pages/NodePage/: index.tsx
client/src/features/graph/pages/UpdateNodePage/: index.tsx
client/src/features/home/HomePage/: index.tsx
client/src/features/home/pages/HomePage/: HomePage.test.tsx  index.tsx
client/src/features/people/pages/PeoplePage/: index.tsx
client/src/features/profile/pages/ProfilePage/: index.tsx
client/src/hooks/: index.ts  useAuth.ts  useRouteMatch.ts
client/src/settings/: index.ts  paths.ts
client/src/styles/: theme.ts
client/src/styles/components/: muiButton.ts
client/src/test/: index.tsx  setup.ts
client/src/types/: index.ts  types.codegen.ts
client/src/utils/: index.ts
client/src/utils/auth/: index.ts
client/src/utils/getCreateNodeLink/: index.ts
client/src/utils/getLinksFromPaths/: getLinksFromPaths.test.ts  index.ts
client/src/utils/parseJwt/: index.ts
migrations/: 20220218160342_create_user_table.sql
server/: Cargo.toml  configuration.yaml
server/migrations/: 20220218160342_create_user_table.sql
server/scripts/: init_db.sh
server/src/: configuration.rs  handlers.rs  lib.rs  main.rs  schema.rs  startup.rs  utils.rs
server/src/data/: mod.rs  model.rs  query.rs
server/src/data/queries/: user.rs
server/src/domain/: id.rs  mod.rs  time.rs
server/src/domain/user/: mod.rs
server/src/domain/user/field/: email.rs  mod.rs  password.rs  username.rs
server/src/graphql/: schema.rs
server/src/graphql/auth/: mod.rs  schema.rs  user.rs
server/src/models/: jwt.rs  user.rs
server/src/service/: jwt.rs  mod.rs  user.rs
server/tests/api/: auth.rs  main.rs  utils.rs
src/: handlers.rs  lib.rs  main.rs  model.rs  schema.rs  startup.rs  test_module.rs  utils.rs
tests/: health_check.rs
tests/api/: auth.rs  health_check.rs  utils.rs
