[package]
name = "graphgram"
version = "0.1.0"
authors = ["Bohdan Ivanchenko <ivanchenko.b@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
async-graphql = "3.0.29"
async-graphql-actix-web = "3.0.29"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.10", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.12.0"

[dev-dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"] }

