[package]
name = "graphgram"
version = "0.1.0"
authors = ["Bohdan Ivanchenko <ivanchenko.b@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
async-graphql = { version = "4.0", features = ["uuid08", "chrono"] }
async-graphql-actix-web = "4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.13.1"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"] }
jsonwebtoken = "8"
derive_more = "0.99"
thiserror = "1"
strum = { version = "0.24.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }

[profile.dev.package.sqlx-macros]
opt-level = 3